Practica 2 menu horizontal

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+
+
+<!--<!DOCTYPE html>
 <html>
     <head>
         <title>Practica CSS - parte 1</title>
@@ -73,5 +75,25 @@
                     </li>
          </ul>
      </div>
+    </body>
+</html>
+-->
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Practica CSS - parte 1</title>
+        <link href="css/style.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav> 
+            <ul>
+                      <li><a href="#" class="active">Home</a></li>
+                      <li><a href="#">Quienes somos</a></li>
+                      <li><a href="#">Galeria</a></li>
+                      <li><a href="#">Servicios</a></li>
+                      <li><a href="#">Contactos</a></li>
+            </ul>
+        </nav>
     </body>
 </html>
