--- a/index.html
+++ b/index.html
@@ -82,18 +82,36 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Practica CSS - parte 1</title>
+        <title>Practica CSS - parte 3</title>
         <link href="css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <nav> 
+        <header>
+            <img class="logo" src="img/cthulhu.png">
+            <img class="red_social" src="img/logofb.png">
+            <img class="red_social" src="img/logotwitter.png">
+            <img class="red_social" src="img/logoinsta.png">
+        </header>
+      
+     <nav class="menu"> 
             <ul>
                       <li><a href="#" class="active">Home</a></li>
-                      <li><a href="#">Quienes somos</a></li>
-                      <li><a href="#">Galeria</a></li>
+                      <li><a href="#">Empresa</a></li>
                       <li><a href="#">Servicios</a></li>
+                      <li><a href="#">Productos</a></li>
                       <li><a href="#">Contactos</a></li>
             </ul>
         </nav>
+
+        <article>
+          <section>
+                <img src="img/images.jpg"
+          </section>
+        </article>
+        <footer>
+            <p>
+                Derechos reservados
+            </p>
+        </footer>
     </body>
 </html>
