Practica 4 logos redes y menu horizontal correciones

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Practica CSS - parte 3</title>
+        <title>Practica CSS - parte 4</title>
         <link href="css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
@@ -92,7 +92,7 @@
             <img class="red_social" src="img/logotwitter.png">
             <img class="red_social" src="img/logoinsta.png">
         </header>
-      
+      <div class="limpia"></div>
      <nav class="menu"> 
             <ul>
                       <li><a href="#" class="active">Home</a></li>
