Practica 5 landing page y formulario

--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!--<!DOCTYPE html>
 <html>
     <head>
@@ -78,8 +76,7 @@
     </body>
 </html>
 -->
-
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
     <head>
         <title>Practica CSS - parte 4</title>
@@ -115,3 +112,77 @@
         </footer>
     </body>
 </html>
+-->
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Practica CSS - parte 5</title>
+        <link href="css/style.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+      <section class="section-top">
+         <div class="col-center">
+                <header>
+                        <img class="logo" src="img/cthulhu.png">
+                        <ul class="redes">
+                            <li>
+                                    <img class="red_social" src="img/logofb.png">
+                            </li>
+                            <li>
+                                    <img class="red_social" src="img/logotwitter.png">
+                            </li>
+                            <li>
+                                    <img class="red_social" src="img/logoinsta.png">
+                            </li>
+
+                        </ul>
+                    </header>
+            <section class="content-left">
+                <h2>
+                        Historia Antigua
+                </h2>
+                <h4>
+                   <p>
+                        "Hay motivos para abrigar la esperanza de que mi experiencia haya sido, al menos en parte, una alucinación, desde luego justificada por las circunstancias. No obstante, la impresión de realidad fue tan terrible, que a veces pienso que es vana esa esperanza"
+                   </p>
+                </h4>
+                <p>
+                        "Si no he sido víctima de una alucinación, la humanidad deberá estar dispuesta a aceptar un nuevo enfoque científico sobre la realidad del cosmos, y sobre el lugar que corresponde al hombre en el loco torbellino del tiempo".
+                </p>
+                   <p class="center-text margin-top">
+                        <a href="#" class="button">
+                           Descargar
+                        </a> 
+                   </p> 
+            </section>
+            <section class="content-right">
+                    <h3>
+                        Regístrate ahora 
+                    </h3>  
+                <form>
+                          <input type="text" class="input" placeholder="Nombre">
+                          <input type="text" class="input" placeholder="Email">
+                          <input type="text" class="input" placeholder="Celular">
+                          <textarea rows="3" class="input" placeholder="Comentario"></textarea>
+                          <input type="button" value="Registrarse" class="button"   
+                </form>
+
+                </section>
+         </div>
+    </section> 
+    <section class="section-bottom">
+        <div class="col-center">
+                <p>
+                    "Algún día, la reconstrucción de conocimientos dispersos nos dará a conocer tan terribles panorámicas de la realidad"
+                </p>
+        </div>
+    </section> 
+    </body>
+</html>
+
+
+
+
+
