--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@
     </body>
 </html>
 -->
-
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -192,3 +191,48 @@
 
 
 
+
+-->
+
+<!DOCTYPE html>
+<html>
+    <head>
+            <meta charset="utf-8">
+            <title>Practica CSS - parte 7</title>
+            <link href="css/style.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+     <div class="contenedor clear">
+        <div class="col-nivel1">
+                <div class="img"><img src="img/cthulhu.png"></div>
+                <p>
+                    A mi parecer, no hay nada más misericordioso en el mundo que la incapacidad del cerebro
+                       humano de correlacionar todos sus contenidos. Vivimos en una plácida isla de ignorancia en medio de
+                       mares negros e infinitos, pero no fue concebido que debiéramos llegar muy lejos. Hasta el momento las
+                       ciencias, cada una orientada en su propia dirección, nos han causado poco daño; pero algún día, la
+                       reconstrucción de conocimientos dispersos nos dará a conocer tan terribles panorámicas de la realidad, y
+                       lo terrorífico del lugar que ocupamos en ella, que sólo podremos enloquecer como consecuencia de tal
+                       revelación, o huir de la mortífera luz hacia la paz y seguridad de una nueva era de tinieblas.
+                </p>
+        </div>
+        <div class="col-nivel2">
+                <div class="img"><img src="img/cthulhu.png"></div>
+                <p>
+                  Hasta el momento las ciencias, cada una orientada en su propia dirección, nos han causado poco daño; pero algún día, la
+                       reconstrucción de conocimientos dispersos nos dará a conocer tan terribles panorámicas de la realidad, y
+                       lo terrorífico del lugar que ocupamos en ella, que sólo podremos enloquecer como consecuencia de tal
+                       revelación, o huir de la mortífera luz hacia la paz y seguridad de una nueva era de tinieblas.
+                </p>
+        </div>
+        <div class="col-nivel2">
+                <div class="img"><img src="img/cthulhu.png"></div>
+                
+                <p>
+                  Algún día, la reconstrucción de conocimientos dispersos nos dará a conocer tan terribles panorámicas de la realidad, y
+                       lo terrorífico del lugar que ocupamos en ella, que sólo podremos enloquecer como consecuencia de tal
+                       revelación, o huir de la mortífera luz hacia la paz y seguridad de una nueva era de tinieblas.
+                </p>
+        </div>         
+     </div>
+    </body>
+</html>
