--- a/index.html
+++ b/index.html
@@ -193,8 +193,7 @@
 
 
 -->
-
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
     <head>
             <meta charset="utf-8">
@@ -233,6 +232,23 @@
                        revelación, o huir de la mortífera luz hacia la paz y seguridad de una nueva era de tinieblas.
                 </p>
         </div>         
+     </div>
+    </body>
+</html>
+-->
+
+<!DOCTYPE html>
+<html>
+    <head>
+            <meta charset="utf-8">
+            <title>Practica CSS - parte 8</title>
+            <link href="css/style.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+     <div class="contenedor clear">
+        <p class="cel">Celular</p>
+        <p class="tablet">Tablet</p>
+        <p class="pc">Pc</p>
      </div>
     </body>
 </html>
