Practica 9 Font awesome

--- a/index.html
+++ b/index.html
@@ -236,8 +236,7 @@
     </body>
 </html>
 -->
-
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
     <head>
             <meta charset="utf-8">
@@ -250,5 +249,19 @@
         <p class="tablet">Tablet</p>
         <p class="pc">Pc</p>
      </div>
+    </body>
+</html>-->
+
+<!DOCTYPE html>
+<html>
+    <head>
+            <meta charset="utf-8">
+            <title>Practica CSS - parte 9</title>
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    </head>
+    <body>
+            <i class="fa fa-car"></i>
+            <i class="fa fa-car" style="font-size:48px;"></i>
+            <i class="fa fa-car" style="font-size:60px;color:red;"></i>
     </body>
 </html>
