Practica 10 fontawesome y menus

--- a/index.html
+++ b/index.html
@@ -251,8 +251,7 @@
      </div>
     </body>
 </html>-->
-
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
     <head>
             <meta charset="utf-8">
@@ -264,4 +263,65 @@
             <i class="fa fa-car" style="font-size:48px;"></i>
             <i class="fa fa-car" style="font-size:60px;color:red;"></i>
     </body>
+</html>
+-->
+
+
+<!DOCTYPE html>
+<html>
+    <head>
+            <meta charset="utf-8">
+            <title>Practica CSS - parte 10</title>
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+            <link href="css/style.css" rel="stylesheet" type="text/css">
+    </head>
+    
+<body>
+        <ul class="menu">
+                <li>
+                    <a href="#"><span class="fa fa-home"></span>Home</a> 
+                </li>
+                <li>
+                        <a href="#"><span class="fa fa-institution"></span>Empresa</a> 
+                </li>
+                <li>
+                        <a href="#"><span class="fa fa-suitcase"></span>Servicios</a> 
+                </li>
+                <li>
+                        <a href="#"><span class="fa fa-shopping-cart"></span>Productos</a> 
+                </li>
+                <li>
+                        <a href="#"><span class="fa fa-envelope"></span>Mensajes</a> 
+                </li>
+        </ul>
+        <ul class="lista">
+                <li>
+                    <a href="#"><span class="fa fa-home"></span>Dashboard</a> 
+                </li>
+                <li>
+                        <a href="#"><span class="fa fa-envelope"></span>Mensajes</a> 
+                </li>
+                <li>
+                        <a href="#"><span class="fa fa-cog"></span>Configuración</a> 
+                </li>
+                <li>
+                        <a href="#"><span class="fa fa-sign-out"></span>Salir</a> 
+                </li>
+               
+        </ul>
+        <ul class="redes">
+                <li>
+                    <a href="#"><i class="fa fa-facebook"></i></a> 
+                </li>
+                <li>
+                        <a href="#"><i class="fa fa-twitter"></i></a> 
+                </li>
+                <li>
+                        <a href="#"><i class="fa fa-instagram"></i></a> 
+                </li>
+        </ul>
+
+
+
+</body>
 </html>
